# ode

./: .gitignore  CMakeLists.txt  Doxyfile  conanfile.py
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  getting_started.md  index.rst
include/: ode.hpp
include/ode/: concept_api.hpp  controllers.hpp  dense.hpp  integrate.hpp  problem.hpp  samplers.hpp  solution.hpp  solve_ivp.hpp  state.hpp  states.hpp  step_result.hpp  steppers.hpp  tableau.hpp
include/ode/rk/: steppers.hpp  tableau.hpp
include/ode/symplectic/: steppers.hpp
tests/: CMakeLists.txt  test_adaptive_steppers.cpp  test_dop853.cpp  test_fixed_steppers.cpp  test_problems.hpp  test_state_and_concepts.cpp  test_verlet.cpp
